--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@
 
 ## => Site Settings
 ##############################
-text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+highlight_theme: tomorrow-night # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : Your Site Title
+title   : bytes, beats, brus and tunes!
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+If I have seen further it is by standing on the shoulders of giants
 
 
 ## => Language and Timezone
@@ -35,11 +35,11 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : Your Name
-  url       :
-  avatar    : # path or url of avatar image (square)
-  bio       : I am an amazing person.
-  email     :
+  name      : Jean Weinmann
+  url       : 
+  avatar    : assets\images\DSC_6904.jpg # path or url of avatar image (square)
+  bio       : Hi, my name is Jean Weinmann. I am a third-year Computer Engineering student at the University of Pretoria. I am disciplined in the art of problem-solving, and I turn stumbling blocks into opportunities. I enjoy integrating load-shedding schedules into coffee machines to ensure a warm brew and training neural networks to predict sport outcomes. I am knowledgeable in both embedded and desktop software design. I will engineer a simple, elegant solution to any challenge.
+  email     : weinmann.j@tuks.co.za
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
@@ -48,14 +48,14 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  linkedin  : jeanweinmann # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  github    : jeanweinmann # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: jeanweinmann/jeanweinmann.github.io
 repository_tree: master
 
 
