--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : # the base hostname & protocol for your site e.g. https://www.someone.
 baseurl : # does not include hostname
 title   : bytes, beats, brus and tunes!
 description: > # this means to ignore newlines until "Language & timezone"
-If I have seen further it is by standing on the shoulders of giants
+            If I have seen further it is by standing on the shoulders of giants
 
 
 ## => Language and Timezone
@@ -34,7 +34,7 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ## => Author and Social
 ##############################
 author:
-  type      : # "person" (default), "organization"
+  type      : person # "person" (default), "organization"
   name      : Jean Weinmann
   url       : 
   avatar    : assets\images\DSC_6904.jpg # path or url of avatar image (square)
